namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    environment: app
