Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # namespace: app
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /httpd
    # nginx.ingress.kubernetes.io/rewrite-target: /tomcat
spec:
  rules:
  - host: a7eefb31eb1a942f8845233308391b17-526197803.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: httpd-svc
            port:
              number: 80
      - path: /tomcat
        pathType: Prefix
        backend:
          service:
            name: tomcat-svc
            port:
              number: 80
